<resources>
    <string name="app_name">Oben</string>
    <string name="ok">OK</string>

    <string name="startRecording">Touch button to start recording.</string>
    <string name="stopRecording">Touch button to stop recording.</string>

    <string name="action_settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="header_description">When the sunlight strikes raindrops in the air, they act like a prism and form a rainbow.</string>
    <string name="cancelButtonStr"><![CDATA[Save & Exit]]></string>

    <string name="permission_available_microphone">Microphone Permission has been granted. Microphone can now be recorded.</string>
    <string name="permission_available_storage">Storage Permissions have been granted. Storage can now be writed.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_microphone_rationale">Microphone permission is needed to record the voice.</string>
    <string name="permission_storage_rationale">Storage permissions are needed to write the storage.</string>

    <string name="unauthorized_toast">We have experienced a Network Error.
        We have successfully saved all your work and you can now resume where you left off.
        We apologize for any inconvenience.</string>
    <string name="exit_message_str">All of your recordings have been saved.
        You may return and continue recording where you left off at any time.</string>
    <string name="Grant_necessary_permissions">Please go to app settings and grant all necessary permissions</string>

    <!-- String Resources for Login Activity -->
    <string name="Please_Login">Please Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>

    <!-- String Resources for Profile Activity -->
    <string name="Your_Profile">Your Profile</string>
    <string name="Logout">Logout</string>
    <string name="Setup_Your_Avatar">Setup Your Avatar</string>
    <string name="User_ID">User ID</string>
    <string name="Avatar_ID">Avatar ID</string>
    <string name="Regular_Avatar_ID">Regular Avatar ID</string>
    <string name="Commercial_Avatar_ID">Commercial Avatar ID</string>
    <string name="Freestyle_Avatar_ID">Freestyle Avatar ID</string>

    <!-- String Resources for Option Activity -->
    <string name="Cancel">Cancel</string>
    <string name="Regular">Regular</string>
    <string name="Commercial">Commercial</string>
    <string name="Freestyle">Freestyle</string>

    <!-- String Resources for Regular Activity -->
    <string name="Hear_Sample">Hear Sample</string>
    <string name="LISTEN">LISTEN</string>
    <string name="REC">REC</string>
    <string name="STOP">STOP</string>
</resources>
