<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext">

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/cancelButtonStr"
            android:textColor="@color/oben_blue"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btn_record"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                android:src="@drawable/background_image_mic_blue" />

            <TextView
                android:id="@+id/tv_record_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startRecording"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80808080"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>